Start of creating modules

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,3 +4,6 @@ site_name: OpenSight
 nav: 
   - Home: index.md
   - Quick Start: quickstart.md
+  - Creating Modules: modules.md
+markdown_extensions:
+  - codehilite
