--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,8 +25,10 @@ nav:
     # - (TODO) Drawing Operations: modules/draw.md 
     # - (TODO) NetworkTables: modules/nt.md 
   - Planned Pages: planned.md
-  - Advanced:
-    - Creating Modules: creating-modules.md
+  - Module Development:
+    - Introduction: module-dev/intro.md
+    - Module Structure: module-dev/structure.md
+  - Glossary: glossary.md
 
 markdown_extensions:
   - toc:
@@ -50,6 +52,7 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - def_list
 
 copyright: 'Copyright &copy; 2019. MIT License'
 
