--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,17 +13,18 @@ edit_uri: https://github.com/opensight-cv/docs/edit/master/docs
 
 nav: 
   - Home: index.md
-  # - Getting Started:
+  - Getting Started:
     # - (TODO) Hardware: getting-started/hardware.md
-    # - (TODO) Installation: getting-started/installation.md
-    # - (TODO) Upgrading: getting-started/upgrading.md
+    - Installation: getting-started/installation.md
+    - Upgrading: getting-started/upgrading.md
+    - Quick Start: getting-started/quickstart.md
   # - Modules:
-    # - (TODO) Contours: modules/contours.md 
-    # - (TODO) Video IO: modules/videoio.md 
-    # - (TODO) Color Operations: modules/color.md 
-    # - (TODO) Mask Operations: modules/mask.md 
-    # - (TODO) Drawing Operations: modules/draw.md 
-    # - (TODO) NetworkTables: modules/nt.md 
+    # - Contours: modules/contours.md 
+    # - Video IO: modules/videoio.md 
+    # - Color Operations: modules/color.md 
+    # - Mask Operations: modules/mask.md 
+    # - Drawing Operations: modules/draw.md 
+    # - NetworkTables: modules/nt.md 
   - Planned Pages: planned.md
   - Module Development:
     - Introduction: module-dev/intro.md
