--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,11 +20,11 @@ nav:
     - Getting Started: quickstart/getting-started.md
   - Modules:
     - Contours: modules/contours.md
-    # - Video IO: modules/videoio.md
+    - Video IO: modules/videoio.md
     - Color Operations: modules/color.md
-    # - Mask Operations: modules/mask.md
+    - Mask Operations: modules/mask.md
     - Drawing Operations: modules/draw.md
-    # - NetworkTables: modules/nt.md
+    - NetworkTables: modules/nt.md
   - Module Development:
     - Introduction: module-dev/intro.md
     - Module Structure: module-dev/structure.md
